k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
